// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChorusAdapter getPaymentFlatRawData should return PaymentFlatRawData 1`] = `
{
  "amount": 1000,
  "attachementComptable": "BRET",
  "centreFinancierCode": "AA01/0776-C001-4000",
  "centreFinancierLibelle": "UO DGER XXXX-C001",
  "ej": "0001821732",
  "exerciceBudgetaire": 2023,
  "idEntrepriseBeneficiaire": Siren {
    "siren": "123456789",
  },
  "idEtablissementBeneficiaire": Siret {
    "siret": "12345678900018",
  },
  "operationDate": 2025-02-02T00:00:00.000Z,
  "typeIdEntrepriseBeneficiaire": "siren",
  "typeIdEtablissementBeneficiaire": "siret",
}
`;

exports[`ChorusAdapter toCommon returns proper result 1`] = `
{
  "bop": "0BOP",
  "date_debut": 2022-02-02T00:00:00.000Z,
  "exercice": 2022,
  "montant_verse": 42789,
}
`;

exports[`ChorusAdapter toNotAggregatedChorusPaymentFlatEntity should return PaymentFlatEntity when data is fully provided 1`] = `
{
  "actionCode": "0101-01-02",
  "actionLabel": "Label d'action Exemple",
  "activityCode": "077601003222",
  "activityLabel": "Label d'activité Exemple",
  "amount": 89988.3,
  "attachementComptable": "BRET",
  "centreFinancierCode": "AA01/0776-C001-4000",
  "centreFinancierLibelle": "UO DGER XXXX-C001",
  "ej": "0001821732",
  "exerciceBudgetaire": 2023,
  "idEntrepriseBeneficiaire": Siren {
    "siren": "100000000",
  },
  "idEtablissementBeneficiaire": Siret {
    "siret": "10000000000001",
  },
  "idVersement": "10000000000001-0001821732-2023",
  "ministry": "Ministère Exemple",
  "ministryAcronym": "ME",
  "mission": "Mission Exemple",
  "operationDate": 2023-07-12T00:00:00.000Z,
  "programName": "Programme Exemple",
  "programNumber": 101,
  "provider": "chorus",
  "regionAttachementComptable": "Bretagne",
  "typeIdEntrepriseBeneficiaire": "siren",
  "typeIdEtablissementBeneficiaire": "siret",
  "uniqueId": "10000000000001-0001821732-2023-101-0101-01-02-077601003222-2023-07-12-BRET-AA01/0776-C001-4000",
}
`;

exports[`ChorusAdapter toNotAggregatedChorusPaymentFlatEntity should return PaymentFlatEntity with null when data is not fully provided 1`] = `
{
  "actionCode": "0101-01-02",
  "actionLabel": "Label d'action Exemple",
  "activityCode": "077601003222",
  "activityLabel": "Label d'activité Exemple",
  "amount": 89988.3,
  "attachementComptable": "BRET",
  "centreFinancierCode": "AA01/0776-C001-4000",
  "centreFinancierLibelle": "UO DGER XXXX-C001",
  "ej": "0001821732",
  "exerciceBudgetaire": 2023,
  "idEntrepriseBeneficiaire": Siren {
    "siren": "100000000",
  },
  "idEtablissementBeneficiaire": Siret {
    "siret": "10000000000001",
  },
  "idVersement": "10000000000001-0001821732-2023",
  "ministry": "Ministère Exemple",
  "ministryAcronym": "ME",
  "mission": null,
  "operationDate": 2023-07-12T00:00:00.000Z,
  "programName": null,
  "programNumber": 101,
  "provider": "chorus",
  "regionAttachementComptable": "Bretagne",
  "typeIdEntrepriseBeneficiaire": "siren",
  "typeIdEtablissementBeneficiaire": "siret",
  "uniqueId": "10000000000001-0001821732-2023-101-0101-01-02-077601003222-2023-07-12-BRET-AA01/0776-C001-4000",
}
`;

exports[`ChorusAdapter toPayment should return complet entity 1`] = `
{
  "activitee": {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "Appels a projet",
  },
  "amount": {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "number",
    "value": 89988.3,
  },
  "bop": {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "101",
  },
  "branche": {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "Associations",
  },
  "centreFinancier": {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "UO DGER XXXX-C001",
  },
  "codeBranche": {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "Z039",
  },
  "compte": undefined,
  "dateOperation": {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "object",
    "value": 2023-07-12T00:00:00.000Z,
  },
  "domaineFonctionnel": {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "Appels à projet",
  },
  "ej": {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "0001821732",
  },
  "libelleProgramme": {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Data Bretagne",
    "type": "string",
    "value": "PROGRAM 101",
  },
  "numeroDemandePaiement": {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "000195567",
  },
  "numeroTier": {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "ASSO 1",
  },
  "programme": {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Data Bretagne",
    "type": "number",
    "value": 101,
  },
  "siret": {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "10000000000001",
  },
  "type": undefined,
  "versementKey": {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "Chorus",
    "type": "string",
    "value": "0001821732",
  },
}
`;
